# Habit-Tracker-Website

./: .dockerignore  .gitignore  CLAUDE.md  Data_Cleaning.py  Feature List.txt  Notes.txt  QA_Env.ipynb  README.md  dailysummary.csv  data_cleaning.py  db.py  docker-compose.yml  dockerfile  fix.ipynb  generate_charts.py  habits.db  habits.db-shm  habits.db-wal  import_new_apple.py  linux_import_new_apple.py  main.py  new_apple_import.py  nginx.conf  pyproject.toml  requirements.txt  testing.ipynb  visualization.py  webapp_workflow.bat
apple/: apple_health_xml_convert.py
bike_files/: 5-25-2026 Bike Workout.fit
cronometer/: .gitkeep
static/: Windows Troubleshooting Guide.txt  coding_cheatsheet.md  kpi_stats.csv  styles.css
templates/: 10rm_tracker.html  base.html  dynamic_visualizations.html  exercise_filter.html  habit_calendar.html  index.html  old-overview_visualizations.html  overview_visualizations.html  static_visualizations.html  visualization.html  visualization_dashboard.html  visualizations.html
