[project]
name = "habit-tracker-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fitparse>=1.2.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "plotnine>=0.15.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]
